# doc-review

./: API.rst  CHANGES.rst  LICENSE  README.rst  TODO.rst  api.rst  doc-review.cabal
content/: sample.html
src/: Analyze.hs  Config.hs  Feed.hs  Glue.hs  Main.hs  Privilege.hs  Report.hs  State.hs
src/Config/: Format.hs  GetOpt.hs  Store.hs  Types.hs
src/Config/Command/: Report.hs  Run.hs  Scan.hs
src/DocReview/: App.hs  Scan.hs
src/DocReview/App/: HTML.hs
src/State/: Disk.hs  Logger.hs  Mem.hs  SQLite.hs  Types.hs
static/: comments.css  default.css
static/support/javascript/: hsbook.js
test/: Main.hs
