Name:                doc-review
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

data-files:
      static/*.css,
      static/support/javascript/*.js,
      static/support/icons/*.gif

Flag test
  Description: Build the test executable
  Manual: True
  Default: False

Executable doc-review
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4,
    base64-bytestring == 0.1.*,
    binary == 0.5.*,
    bytestring >= 0.9.1 && <0.10,
    containers,
    directory,
    filepath >= 1.1 && <1.2,
    haskell98,
    heist >= 0.2.2 && <0.3,
    hexpat >= 0.18.2 && <0.19,
    json == 0.4.*,
    MonadCatchIO-transformers,
    monads-fd >= 0.1 && <0.2,
    network == 2.2.*,
    old-locale == 1.0.*,
    snap-core >= 0.2 && <0.3,
    snap-server >= 0.2 && <0.3,
    sqlite == 0.5.*,
    tagchup == 0.4.*,
    text == 0.7.*,
    time == 1.1.*,
    transformers == 0.2.*,
    unix,
    xhtml-combinators,
    xml-basic == 0.1.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Executable test
  HS-Source-Dirs: test, src
  Main-is: Main.hs
  if flag(test)
    Build-Depends: MonadRandom,
                   array,
                   text == 0.7.*
  else
    Buildable: False